<resources>
    <string name="app_name">Assigment 6</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="small">Small</string>
    <string name="medium">Medium</string>
    <string name="large">Large</string>
    <string name="sugar">Sugar</string>
    <string name="extra_small">Extra sugar</string>

    <string name="correct_order_a">Is this order correct?</string>
    <string name="order_fresh_brewed_coffee">Order freshly brewed coffee</string>
    <string name="size">Size</string>
    <string name="milk">Milk</string>
    <string name="special_instructions">Special Instructions</string>

    <string name="brew">Brew</string>
    <string name="load_favorite">LOAD FAVORITE</string>
    <string name="save_favorite">SAVE FAVORITE</string>
    <string name="order">ORDER</string>
    <string name="clear">CLEAR</string>

    <string name="confirm">CONFIRM</string>
    <string name="cancel">CANCEL</string>
    <string name="order_for">Order for </string>
    <string name="name">Name</string>
    <string name="add_new_order">Add to Cart</string>

    <string name="current_cart">Current Orders</string>


</resources>
