<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="1">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_weight="0.22"
            android:orientation="vertical"
            android:weightSum="1">

            <TextView
                android:id="@+id/textOrderConfirm"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="New Text"
                android:textSize="@dimen/medium_text_size" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_between_widgets"
                android:orientation="horizontal"
                android:weightSum="1">

                <TextView
                    android:id="@+id/textBrew"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Large Text"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textSize="@dimen/medium_text_size"
                    android:textStyle="bold|normal" />

                <TextView
                    android:id="@+id/textSize"
                    android:layout_width="wrap_content"
                    android:layout_height="27dp"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:layout_weight="0.12"
                    android:text="New Text" />
            </LinearLayout>

            <TextView
                android:id="@+id/textSpecialInstructions"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/space_between_widgets"
                android:layout_weight="0.22"
                android:linksClickable="false"
                android:text="New Text"
                android:textSize="@dimen/medium_text_size"
                android:textStyle="normal" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="129dp"
                android:layout_gravity="center_horizontal"
                android:layout_weight="0.02"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="fill_parent"
                    android:layout_height="63dp"
                    android:layout_weight=".8"
                    android:gravity="center_vertical"
                    android:text="@string/current_cart"
                    android:textSize="@dimen/medium_text_size"
                    android:textStyle="bold|italic" />

                <ListView
                    android:id="@+id/listViewOrder"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/space_between_widgets"
                    android:layout_weight=".2" />
            </LinearLayout>

            <TextView
                android:id="@+id/textView"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:gravity="center_horizontal"
                android:text="@string/correct_order_a"
                android:textSize="@dimen/medium_text_size"
                android:textStyle="normal" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="217dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/space_between_widgets"
            android:orientation="horizontal">

            <Button
                android:id="@+id/buttonConfirm"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:text="@string/confirm" />

            <Button
                android:id="@+id/buttonClear"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:text="@string/cancel" />
        </LinearLayout>

    </LinearLayout>
</ScrollView>